src/snapshots/jj_pr__tests__show@hydro-prs-approved-1778006800.json.gz.snap
---
source: src/tests.rs
expression: render_show(&f)
input_file: src/fixtures/hydro-prs-approved-1778006800.json.gz
---
○    [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2812PR #2812]8;;[0m  [33mDraft[0m  [1m[35mmingwei/delete-subgraph-id[0m
├─╮  refactor(dfir_rs): remove SubgraphId, SubgraphTag, LoopId, LoopTag, simplify StateLifespan
│ ○  [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2810PR #2810]8;;[0m  [32mReady[0m  [1m[35mmingwei/delete-metrics-slotvec[0m
│ │  refactor(dfir_rs): use slotmap SecondaryMap for metrics
○ │  [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2811PR #2811]8;;[0m  [32mReady[0m  [1m[35mmingwei/delete-schedule-subgraph-args[0m
├─╯  refactor(dfir_rs,dfir_lang): remove `schedule_subgraph`'s `SubgraphId` arg, no-op calls, and remove `current_subgraph`
│ ○  [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2836PR #2836]8;;[0m  [32mReady[0m  [1m[35mmingwei/delete-owo-dots[0m
│ │  refactor(dfir_lang): remove `..` from OperatorWriteOutput destructures in delegating operators
│ ○  [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2835PR #2835]8;;[0m  [32mReady[0m  [1m[35mmingwei/delete-state-api[0m
├─╯  refactor(dfir_lang)!: Remove the now-unused state API (add_state, state_ref_unchecked, set_state_lifespan_hook)
│ ○  [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2746PR #2746]8;;[0m*  [32mReady[0m  [1m[35mmingwei/sqs-rebase[0m
├─╯  feat(hydro_test): add example of AWS + SQS support
│ [1m[32m@[0m  [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2841PR #2841]8;;[0m*  [32mReady[0m  [1m[35mmingwei/delete-delaytype[0m
│ │  refactor(dfir_lang): remove `DelayType::Stratum`/`MonotoneAccum` from operator `input_delaytype_fn`
│ ○  [1m[36m]8;;https://github.com/hydro-project/hydro/pull/2829PR #2829]8;;[0m  [32mReady[0m  [1m[35mmingwei/singleton-refs-dfir[0m
├─╯  refactor(dfir_lang): DFIR singleton references, convert singleton state to plain local variables
[1m[36m◆[0m  [1m[32mtrunk()[0m
[2m~[0m  [2m(elided revisions)[0m
